--- a/app/views/admin/personalities/edit.html.erb
+++ b/app/views/admin/personalities/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Personality</h1>
+<h1>パーソナリティを編集</h1>
 
 <%= render 'form', personality: @personality %>
 
-<%= link_to 'Show', @personality %> |
-<%= link_to 'Back', admin_personality_path %>
+<%= link_to '詳細', @personality %>
