--- a/app/views/admin/personalities/show.html.erb
+++ b/app/views/admin/personalities/show.html.erb
@@ -1,4 +1,3 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_admin_personality_path(@personality) %> |
-<%= link_to 'Back', admin_personalities_path %>
+<%= link_to '編集', edit_admin_personality_path(@personality) %>
