--- a/app/views/admin/personalities/_form.html.erb
+++ b/app/views/admin/personalities/_form.html.erb
@@ -1,15 +1,5 @@
-<%= form_with(model: personality, local: true) do |form| %>
-  <% if personality.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(personality.errors.count, "error") %> prohibited this personality from being saved:</h2>
-
-      <ul>
-      <% personality.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_with(model: [:admin, personality], local: true) do |form| %>
+  <%= render 'admin/shared/errors', object: personality %>
 
   <div class="actions">
     <%= form.submit %>
