--- a/app/views/admin/personalities/index.html.erb
+++ b/app/views/admin/personalities/index.html.erb
@@ -1,10 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Personalities</h1>
+<h1>パーソナリティ一覧</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
+      <th>名前</th>
+      <th>自己紹介</th>
+      <th>権限</th>
+      <th>Email</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,9 +16,13 @@
   <tbody>
     <% @personalities.each do |personality| %>
       <tr>
-        <td><%= link_to 'Show', personality %></td>
-        <td><%= link_to 'Edit', edit_admin_personality_path(personality) %></td>
-        <td><%= link_to 'Destroy', personality, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= personality.name %></td>
+        <td><%= truncate(personality.description) if personality.description %></td>
+        <td><%= personality.role %></td>
+        <td><%= personality.email %></td>
+        <td><%= link_to '詳細', admin_personality_path(personality) %></td>
+        <td><%= link_to '編集', edit_admin_personality_path(personality) %></td>
+        <td><%= link_to '削除', admin_personality_path(personality), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -22,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Personality', new_admin_personality_path %>
+<%= link_to '新規パーソナリティ作成', new_admin_personality_path, class: 'btn btn-primary' %>
