--- a/app/views/admin/personalities/new.html.erb
+++ b/app/views/admin/personalities/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Personality</h1>
+<h1>新規パーソナリティ作成</h1>
 
 <%= render 'form', personality: @personality %>
-
-<%= link_to 'Back', new_admin_personality_path %>
