--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -24,7 +24,7 @@
       </li>
       <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Personalities">
         <%= link_to admin_personalities_path, class: "nav-link" do %>
-          <i class="fa fa-fw fa-table"></i>
+          <i class="fa fa-fw fa-user-circle-o"></i>
           <span class="nav-link-text">パーソナリティ一覧</span>
         <% end %>
       </li>
