--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -28,6 +28,12 @@
           <span class="nav-link-text">パーソナリティ一覧</span>
         <% end %>
       </li>
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Events">
+        <%= link_to admin_events_path, class: "nav-link" do %>
+          <i class="fa fa-fw fa-calendar"></i>
+          <span class="nav-link-text">イベント一覧</span>
+        <% end %>
+      </li>
       <ul class="navbar-nav sidenav-toggler">
         <li class="nav-item">
           <a class="nav-link text-center" id="sidenavToggler">
