--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -22,6 +22,7 @@
     </div>
   </div>
 
+  <!--# TODO: Datetime pickerを入れた方が良いかも？-->
   <div class="form-group row">
     <%= form.label :started_at, class: 'col-2 col-form-label' %>
     <div class="col-10">
@@ -29,6 +30,7 @@
     </div>
   </div>
 
+  <!--# TODO: Datetime pickerを入れた方が良いかも？-->
   <div class="form-group row">
     <%= form.label :ended_at, class: 'col-2 col-form-label' %>
     <div class="col-10">
