--- a/app/views/admin/communities/show.html.erb
+++ b/app/views/admin/communities/show.html.erb
@@ -11,6 +11,15 @@
 </dl>
 
 <dl class="dl-horizontal">
+  <dt><strong><%= Community.human_attribute_name('events') %> :</strong></dt>
+  <dd>
+    <% @community.events.each do |event| %>
+      <%= link_to event.name, admin_event_path(event) %><br>
+    <% end %>
+  </dd>
+</dl>
+
+<dl class="dl-horizontal">
   <dt><strong><%= Community.human_attribute_name('description') %> :</strong></dt>
   <dd><%= simple_format(@community.description) %></dd>
 </dl>
