--- a/app/views/admin/radios/edit.html.erb
+++ b/app/views/admin/radios/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Radio</h1>
+<h1>ラジオ情報を編集</h1>
 
 <%= render 'form', radio: @radio %>
-
-<%= link_to 'Show', @radio %> |
-<%= link_to 'Back', radios_path %>
