--- a/app/views/admin/radios/show.html.erb
+++ b/app/views/admin/radios/show.html.erb
@@ -1,4 +1,3 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_radio_path(@radio) %> |
-<%= link_to 'Back', radios_path %>
+<%= link_to '編集', edit_admin_radio_path(@radio) %>
