--- a/app/views/admin/radios/_form.html.erb
+++ b/app/views/admin/radios/_form.html.erb
@@ -1,15 +1,5 @@
-<%= form_with(model:[:admin,radio], local: true) do |form| %>
-  <% if radio.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(radio.errors.count, "error") %> prohibited this radio from being saved:</h2>
-
-      <ul>
-      <% radio.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_with(model:[:admin, radio], local: true) do |form| %>
+  <%= render 'admin/shared/errors', object: radio %>
 
   <div class="actions">
     <%= form.submit %>
