--- a/app/views/admin/radios/index.html.erb
+++ b/app/views/admin/radios/index.html.erb
@@ -2,9 +2,11 @@
 
 <h1>ラジオ一覧</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
+      <th><%= Radio.human_attribute_name('title') %></th>
+      <th><%= Radio.human_attribute_name('description') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +14,8 @@
   <tbody>
     <% @radios.each do |radio| %>
       <tr>
+        <td><%= radio.title %></td>
+        <td><%= truncate(radio.description) if radio.description %></td>
         <td><%= link_to '詳細', admin_radio_path(radio) %></td>
         <td><%= link_to '編集', edit_admin_radio_path(radio) %></td>
         <td><%= link_to '削除', admin_radio_path(radio), method: :delete, data: { confirm: 'Are you sure?' } %></td>
