--- a/app/views/admin/radios/_form.html.erb
+++ b/app/views/admin/radios/_form.html.erb
@@ -21,6 +21,17 @@
       <%= form.text_field :mp3, class: 'form-control' %>
     </div>
   </div>
+  
+  <!--# TODO: ここの見た目はもう少し考えた方がいいかも-->
+  <div class="form-group row">
+    <%= form.label :communities, class: 'col-md-2 control-label' %>
+    <div class="col-md-10 form-check">
+      <%= collection_check_boxes(:radio, :community_ids, Community.all, :id, :name) do |b| %>
+        <%= b.check_box %>
+        <%= b.label %>
+      <% end %>
+    </div>
+  </div>
 
   <div class="form-group row">
     <%= form.label :youtube_url, class: 'col-2 col-form-label' %>
