--- a/app/views/admin/radios/show.html.erb
+++ b/app/views/admin/radios/show.html.erb
@@ -6,6 +6,15 @@
 </dl>
 
 <dl class="dl-horizontal">
+  <dt><strong><%= Radio.human_attribute_name('personalities') %> :</strong></dt>
+  <dd>
+    <% @radio.personalities.each do |personality| %>
+      <%= link_to personality.name, admin_personality_path(personality) %><br>
+    <% end %>
+  </dd>
+</dl>
+
+<dl class="dl-horizontal">
   <dt><strong><%= Radio.human_attribute_name('description') %> :</strong></dt>
   <dd><%= simple_format(@radio.description) if @radio.description %></dd>
 </dl>
