--- a/app/views/admin/personalities/show.html.erb
+++ b/app/views/admin/personalities/show.html.erb
@@ -20,4 +20,13 @@
   <dd><%= @personality.email %></dd>
 </dl>
 
+<dl class="dl-horizontal">
+  <dt><strong><%= Personality.human_attribute_name('radios') %> :</strong></dt>
+  <dd>
+    <% @personality.radios.each do |radio| %>
+      <%= link_to radio.title, admin_radio_path(radio) %><br>
+    <% end %>
+  </dd>
+</dl>
+
 <%= link_to '編集', edit_admin_personality_path(@personality) %>
