--- a/app/views/admin/personalities/show.html.erb
+++ b/app/views/admin/personalities/show.html.erb
@@ -6,6 +6,11 @@
 </dl>
 
 <dl class="dl-horizontal">
+  <dt><strong><%= Personality.human_attribute_name('image') %> :</strong></dt>
+  <dd><%= image_tag @personality.image_url(:thumb) %></dd>
+</dl>
+
+<dl class="dl-horizontal">
   <dt><strong><%= Personality.human_attribute_name('role') %> :</strong></dt>
   <dd><%= @personality.role.t %></dd>
 </dl>
