--- a/app/views/admin/communities/show.html.erb
+++ b/app/views/admin/communities/show.html.erb
@@ -6,6 +6,11 @@
 </dl>
 
 <dl class="dl-horizontal">
+  <dt><strong><%= Community.human_attribute_name('logo') %> :</strong></dt>
+  <dd><%= image_tag @community.logo_url(:thumb) %></dd>
+</dl>
+
+<dl class="dl-horizontal">
   <dt><strong><%= Community.human_attribute_name('url') %> :</strong></dt>
   <dd><%= link_to @community.url, @community.url %></dd>
 </dl>
