mp3ファイルをアップロードできるようにした

--- a/app/views/admin/radios/_form.html.erb
+++ b/app/views/admin/radios/_form.html.erb
@@ -18,7 +18,7 @@
   <div class="form-group row">
     <%= form.label :mp3, class: 'col-2 col-form-label' %>
     <div class="col-10">
-      <%= form.text_field :mp3, class: 'form-control' %>
+      <%= form.file_field :mp3 %>
     </div>
   </div>
 
