--- a/app/views/admin/radios/show.html.erb
+++ b/app/views/admin/radios/show.html.erb
@@ -12,7 +12,7 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= Radio.human_attribute_name('mp3') %> :</strong></dt>
-  <dd><%= @radio.mp3 %></dd>
+  <dd><%= audio_tag @radio.mp3_url, controls: true %></dd>
 </dl>
 
 <dl class="dl-horizontal">
