--- a/app/views/admin/communities/index.html.erb
+++ b/app/views/admin/communities/index.html.erb
@@ -14,6 +14,7 @@
     <tr>
       <th><%= Community.human_attribute_name('name') %></th>
       <th><%= Community.human_attribute_name('url') %></th>
+      <th><%= Community.human_attribute_name('tag_list') %></th>
       <th><%= Community.human_attribute_name('description') %></th>
       <th colspan="3"></th>
     </tr>
@@ -24,6 +25,11 @@
       <tr>
         <td><%= community.name %></td>
         <td><%= link_to community.url, community.url %></td>
+        <td>
+          <% community.tag_list.each do |tag| %>
+            <span class="badge badge-primary"><%= tag %></span>
+          <% end %>
+        </td>
         <td><%= truncate(community.description) %></td>
         <td><%= link_to '詳細', admin_community_path(community) %></td>
         <td><%= link_to '編集', edit_admin_community_path(community) %></td>
