--- a/app/views/admin/personalities/_form.html.erb
+++ b/app/views/admin/personalities/_form.html.erb
@@ -25,7 +25,7 @@
   <div class="form-group row">
     <%= form.label :tag_list, class: 'col-2 col-form-label' %>
     <div class="col-10">
-      <%= text_field_tag 'personality[tag_list]', personality.tag_list.join(',') %>
+      <%= text_field_tag 'personality[tag_list]', personality.tag_list.join(','), class: 'js-tag-list' %>
     </div>
   </div>
 
@@ -40,3 +40,7 @@
     <%= form.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
+
+<script>
+  var tag_list = <%= raw @tag_list %>;
+</script>
