communityのタグでもautocompleteが効くよう変更

--- a/app/views/admin/personalities/_form.html.erb
+++ b/app/views/admin/personalities/_form.html.erb
@@ -42,5 +42,8 @@
 <% end %>
 
 <script>
-  var tag_list = <%= raw @tag_list %>;
+  $('.js-tag-list').tagit({
+    singleField: true,
+    availableTags: <%= raw @tag_list %>
+  });
 </script>
