--- a/app/views/admin/communities/_form.html.erb
+++ b/app/views/admin/communities/_form.html.erb
@@ -32,7 +32,7 @@
   <div class="form-group row">
     <%= form.label :tag_list, class: 'col-2 col-form-label' %>
     <div class="col-10">
-      <%= text_field_tag 'community[tag_list]', community.tag_list.join(',') %>
+      <%= text_field_tag 'community[tag_list]', community.tag_list.join(','), class: 'js-tag-list' %>
     </div>
   </div>
 
@@ -40,3 +40,10 @@
     <%= form.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
+
+<script>
+  $('.js-tag-list').tagit({
+    singleField: true,
+    availableTags: <%= raw @tag_list %>
+  });
+</script>
