--- a/app/views/admin/personalities/index.html.erb
+++ b/app/views/admin/personalities/index.html.erb
@@ -1,6 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>パーソナリティ一覧</h1>
+<div class="row">
+  <div class="col-8">
+    <h1>パーソナリティ一覧</h1>
+  </div>
+  <div class="col-4">
+    <%= link_to 'パーソナリティ仮登録', new_admin_personality_path, class: 'btn btn-primary' %>
+  </div>
+</div>
 
 <table class="table table-striped">
   <thead>
