loginページをかっちょよくした

--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -3,5 +3,5 @@
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "パスワードを忘れたとき", new_password_path(resource_name) %><br />
+  <%= link_to "パスワードを忘れたとき", new_password_path(resource_name), class: "d-block small mt-3" %><br />
 <% end -%>
