--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,27 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+  <div class="card card-login mx-auto mt-5">
+    <div class="card-header">パスワードを忘れたとき</div>
+    <div class="card-body">
+      <div class="text-center mt-4 mb-5">
+        <h4>パスワードを忘れましたか？</h4>
+        <p>登録したメールアドレスを入力してください。<br>パスワードをリセットする方法をお送りします。</p>
+      </div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+        <div class="field form-group">
+          <%= f.email_field :email, class: "form-control",autofocus: true %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "メールを送信する", class: "btn btn-primary btn-block" %>
+        </div>
+      <% end %>
+
+      <div class="text-center">
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
