--- a/statics/css/common.css
+++ b/statics/css/common.css
@@ -1,3 +1,4 @@
+
 nav {
     background-color: #7ec7d8;
 }
@@ -6,8 +7,15 @@ nav {
     background-color: #7ec7d8;
 }
 
+
+
 .ui.black.segment {
-    background-color: #666666;
+    background-color: #999999;
+    padding-top: 80px;
+}
+
+.ui.inverted.menu .item.disabled, .ui.inverted.menu .item.disabled:hover {
+    color: rgba(225,225,225,.8);
 }
 
 .ui.white {
@@ -17,6 +25,18 @@ nav {
 .news-contents {
     padding-top: 40px;
     padding-bottom: 40px;
+}
+
+h2.ui.header {
+    font-size: 1.28571429em;
+}
+
+a.header.item {
+    font-size: 1.28571429em;
+}
+
+.ui.menu .item {
+    padding: 0.5em 0.8em;
 }
 
 .radio {
@@ -34,11 +54,45 @@ nav {
 .news {
     padding-left: 10px !important;
     border-left: solid 10px !important;
-    border-color: #666666 !important;
+    border-color: #999999 !important;
 }
 
 .other {
     padding-left: 10px !important;
     border-left: solid 10px !important;
-    border-color: #666666 !important;
+    border-color: #999999 !important;
+}
+
+#computer {
+    display: block;
+}
+
+#mobile {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    #computer {
+	display: none;
+    }
+    #mobile {
+	display: block;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    #computer {
+	display: none;
+    }
+    #mobile {
+	display: block;
+    }    
+}
+
+.ui.blue.right.sidebar.inverted.vertical.menu {
+    font-size: 1.2em;    
+}
+
+.ui.black.center.aligned.segment {
+    border: none !important;
 }
