markdownで編集できるようにした

--- a/app/views/admin/radios/_form.html.erb
+++ b/app/views/admin/radios/_form.html.erb
@@ -18,7 +18,16 @@
   <div class="form-group row">
     <%= form.label :description, class: 'col-2 col-form-label' %>
     <div class="col-10">
-      <%= form.text_area :description, class: 'form-control' %>
+      <div id="editor">
+        <div class="row" style="height: 30em;">
+          <div class="col-6">
+            <textarea name="radio[description]" class="form-control" rows=20 v-model='input' debounce='50'></textarea>
+          </div>
+          <div class="col-6" style="overflow: scroll;">
+            <div v-html='input | marked'></div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -76,4 +85,18 @@
   <div class="actions">
     <%= form.submit class: 'btn btn-primary' %>
   </div>
+
+  <script type="text/javascript">
+    window.onload = function() {
+      new Vue({
+        el: '#editor',
+        data: {
+          input: '<%== j radio.description %>'
+        },
+        filters: {
+          marked: marked
+        },
+      });
+    };
+  </script>
 <% end %>
