--- a/app/views/admin/radios/show.html.erb
+++ b/app/views/admin/radios/show.html.erb
@@ -21,7 +21,7 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= Radio.human_attribute_name('description') %> :</strong></dt>
-  <dd><%= simple_format(@radio.description) if @radio.description %></dd>
+  <dd><%= MarkdownHelper.markdown(@radio.description) %></dd>
 </dl>
 
 <dl class="dl-horizontal">
