--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require jquery-ui/autocomplete
+ *= require bootstrap/bootstrap-tooltip
  *= require_tree ./admin
  *= require font-awesome
  */
