partialに切り出した

--- a/app/views/admin/radios/_form.html.erb
+++ b/app/views/admin/radios/_form.html.erb
@@ -85,16 +85,4 @@
   </div>
 <% end %>
 
-<script type="text/javascript">
-  $(function() {
-    new Vue({
-      el: '#editor',
-      data: {
-        input: '<%== j radio.description %>',
-      },
-      filters: {
-        marked: marked,
-      },
-    });
-  });
-</script>
+<%= render "admin/shared/js_markdown", content: radio.description %>
