--- a/app/views/admin/communities/show.html.erb
+++ b/app/views/admin/communities/show.html.erb
@@ -44,7 +44,7 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= Community.human_attribute_name('description') %> :</strong></dt>
-  <dd><%= simple_format(@community.description) %></dd>
+  <dd><%= MarkdownHelper.markdown(@community.description) %></dd>
 </dl>
 
 <%= link_to '編集', edit_admin_community_path(@community) %>
