--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -7,7 +7,7 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= Event.human_attribute_name('description') %> :</strong></dt>
-  <dd><%= @event.description %></dd>
+  <dd><%= MarkdownHelper.markdown(@event.description) %></dd>
 </dl>
 
 <dl class="dl-horizontal">
