--- a/app/views/admin/personalities/show.html.erb
+++ b/app/views/admin/personalities/show.html.erb
@@ -26,7 +26,7 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= Personality.human_attribute_name('description') %> :</strong></dt>
-  <dd><%= simple_format(@personality.description) if @personality.description %></dd>
+  <dd><%= MarkdownHelper.markdown(@personality.description) %></dd>
 </dl>
 
 <dl class="dl-horizontal">
