add jargon list to layouts/admin.html.erb

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -47,6 +47,12 @@
           <span class="nav-link-text">イベント一覧</span>
         <% end %>
       </li>
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Jargons">
+        <%= link_to admin_jargons_path, class: "nav-link" do %>
+          <i class="fa fa-fw fa-list"></i>
+          <span class="nav-link-text">専門用語一覧</span>
+        <% end %>
+      </li>
       <ul class="navbar-nav sidenav-toggler">
         <li class="nav-item">
           <a class="nav-link text-center" id="sidenavToggler">
