--- a/app/views/admin/jargons/edit.html.erb
+++ b/app/views/admin/jargons/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Jargon</h1>
+<h1>専門用語を編集</h1>
 
 <%= render 'form', jargon: @jargon %>
-
-<%= link_to 'Show', @jargon %> |
-<%= link_to 'Back', jargons_path %>
