--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,3 +1,12 @@
+#body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+#main {
+    flex: 1;
+}
 
 nav {
     background-color: #7ec7d8;
