--- a/app/views/admin/jargons/_form.html.erb
+++ b/app/views/admin/jargons/_form.html.erb
@@ -1,17 +1,35 @@
-<%= form_with(model: jargon, local: true) do |form| %>
-  <% if jargon.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(jargon.errors.count, "error") %> prohibited this jargon from being saved:</h2>
-
-      <ul>
-      <% jargon.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<%= form_with(model: [:admin, jargon], local: true) do |form| %>
+  <%= render 'admin/shared/errors', object: jargon %>
+  
+  <div class="form-group row">
+    <%= form.label :name, class: 'col-2 col-form-label' %>
+    <div class="col-10">
+      <%= form.text_field :name, class: 'form-control' %>
     </div>
-  <% end %>
+  </div>
+
+  <div class="form-group row">
+    <%= form.label :description, class: 'col-2 col-form-label' %>
+    <div class="col-10">
+      <%= form.text_area :description, class: 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <%= form.label :radio_id, class: 'col-2 col-form-label' %>
+    <div class="col-10">
+      <%= form.number_field :radio_id, class: 'form-control' %>
+    </div>
+  </div>
+ 
+  <div class="form-group row">
+    <%= form.label :major, class: 'col-2 col-form-label' %>
+    <div class="col-10">
+      <%= form.number_field :major, class: 'form-control' %>
+    </div>
+  </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
