--- a/app/views/admin/jargons/index.html.erb
+++ b/app/views/admin/jargons/index.html.erb
@@ -1,10 +1,19 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Jargons</h1>
+<div class="row">
+  <div class="col-8">
+    <h1>専門用語一覧</h1>
+  </div>
+  <div class="col-4">
+    <%= link_to '新規専門用語作成', new_admin_jargon_path, class: 'btn btn-primary' %>
+  </div>
+</div>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
+      <th><%= Jargon.human_attribute_name('name') %></th>
+      <th><%= Jargon.human_attribute_name('description') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,14 +21,12 @@
   <tbody>
     <% @jargons.each do |jargon| %>
       <tr>
-        <td><%= link_to 'Show', jargon %></td>
-        <td><%= link_to 'Edit', edit_jargon_path(jargon) %></td>
-        <td><%= link_to 'Destroy', jargon, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= jargon.name %></td>
+        <td><%= truncate(jargon.description) %></td>
+        <td><%= link_to '詳細', admin_jargon_path(jargon) %></td>
+        <td><%= link_to '編集', edit_admin_jargon_path(jargon) %></td>
+        <td><%= link_to '削除', admin_jargon_path(jargon), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Jargon', new_jargon_path %>
