--- a/app/views/admin/radios/_form.html.erb
+++ b/app/views/admin/radios/_form.html.erb
@@ -92,7 +92,7 @@
   </div>
 
   <div class="form-group row radio_reservation_time">
-    <%= form.label :published_at, "予約投稿日時", class: 'col-2 col-form-label' %>
+    <%= form.label :published_at, class: 'col-2 col-form-label' %>
     <div class="col-10">
       <div class="field form-group">
         <%= form.datetime_select :published_at, use_month_numbers: true, class: 'form-control' %>
