--- a/app/views/admin/radios/_form.html.erb
+++ b/app/views/admin/radios/_form.html.erb
@@ -92,10 +92,10 @@
   </div>
 
   <div class="form-group row radio_reservation_time">
-    <%= form.label :published_at, class: 'col-2 col-form-label' %>
+    <%= form.label :reserve_time, class: 'col-2 col-form-label' %>
     <div class="col-10">
       <div class="field form-group">
-        <%= form.datetime_select :published_at, use_month_numbers: true, class: 'form-control' %>
+        <%= form.datetime_select :reserve_time, use_month_numbers: true, class: 'form-control' %>
       </div>
     </div>
   </div>
