--- a/app/views/admin/jargons/_form.html.erb
+++ b/app/views/admin/jargons/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: [:admin, jargon], local: true) do |form| %>
   <%= render 'admin/shared/errors', object: jargon %>
-  
+
   <div class="form-group row">
     <%= form.label :name, class: 'col-2 col-form-label' %>
     <div class="col-10">
@@ -18,10 +18,10 @@
   <div class="form-group row">
     <%= form.label :radio_id, class: 'col-2 col-form-label' %>
     <div class="col-10">
-      <%= form.number_field :radio_id, class: 'form-control' %>
+      <%= form.collection_select :radio_id, Radio.all, :id, :title, class: 'form-control' %>
     </div>
   </div>
- 
+
   <div class="form-group row">
     <%= form.label :major, class: 'col-2 col-form-label' %>
     <div class="col-10">
