--- a/app/views/admin/jargons/_form.html.erb
+++ b/app/views/admin/jargons/_form.html.erb
@@ -18,14 +18,14 @@
   <div class="form-group row">
     <%= form.label :radio_id, class: 'col-2 col-form-label' %>
     <div class="col-10">
-      <%= form.collection_select :radio_id, Radio.all, :id, :title, class: 'form-control' %>
+      <%= form.select :radio_id, Radio.pluck(:title, :id), class: 'form-control' %>
     </div>
   </div>
 
   <div class="form-group row">
     <%= form.label :major, class: 'col-2 col-form-label' %>
     <div class="col-10">
-      <%= form.number_field :major, class: 'form-control' %>
+      <%= form.select :major, JargonMajors.labels, class: 'form-control' %>
     </div>
   </div>
 
