--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -1,6 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>イベント一覧</h1>
+<div class="row">
+  <div class="col-8">
+    <h1>イベント一覧</h1>
+  </div>
+  <div class="col-4">
+    <%= Admin::EventViewObject.link_to_new(current_personality) %>
+  </div>
+</div>
 
 <table class="table table-striped">
   <thead>
@@ -20,14 +27,10 @@
         <td><%= link_to event.url, event.url %></td>
         <td><%= event.started_at %></td>
         <td><%= event.ended_at %></td>
-        <td><%= link_to '詳細', admin_event_path(event) %></td>
-        <td><%= link_to '編集', edit_admin_event_path(event) %></td>
-        <td><%= link_to '削除', admin_event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= Admin::EventViewObject.link_to_show(current_personality, event) %></td>
+        <td><%= Admin::EventViewObject.link_to_edit(current_personality, event) %></td>
+        <td><%= Admin::EventViewObject.link_to_destroy(current_personality, event) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to '新規イベント作成', new_admin_event_path %>
