--- a/app/views/admin/personalities/index.html.erb
+++ b/app/views/admin/personalities/index.html.erb
@@ -5,7 +5,7 @@
     <h1>パーソナリティ一覧</h1>
   </div>
   <div class="col-4">
-    <%= link_to 'パーソナリティ仮登録', new_admin_personality_path, class: 'btn btn-primary' %>
+    <%= Admin::PersonalityViewObject.link_to_new(current_personality) %>
   </div>
 </div>
 
@@ -33,9 +33,9 @@
         <td><%= truncate(personality.description) if personality.description %></td>
         <td><%= personality.role.t %></td>
         <td><%= personality.email %></td>
-        <td><%= link_to '詳細', admin_personality_path(personality) %></td>
-        <td><%= link_to '編集', edit_admin_personality_path(personality) %></td>
-        <td><%= link_to '削除', admin_personality_path(personality), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= Admin::PersonalityViewObject.link_to_show(current_personality, personality) %></td>
+        <td><%= Admin::PersonalityViewObject.link_to_edit(current_personality, personality) %></td>
+        <td><%= Admin::PersonalityViewObject.link_to_destroy(current_personality, personality) %></td>
       </tr>
     <% end %>
   </tbody>
