--- a/app/views/admin/communities/index.html.erb
+++ b/app/views/admin/communities/index.html.erb
@@ -16,7 +16,7 @@
       <th><%= Community.human_attribute_name('url') %></th>
       <th><%= Community.human_attribute_name('tag_list') %></th>
       <th><%= Community.human_attribute_name('description') %></th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -31,9 +31,11 @@
           <% end %>
         </td>
         <td><%= truncate(community.description) %></td>
-        <td><%= Admin::CommunityViewObject.link_to_show(current_personality, community) %></td>
-        <td><%= Admin::CommunityViewObject.link_to_edit(current_personality, community) %></td>
-        <td><%= Admin::CommunityViewObject.link_to_destroy(current_personality, community) %></td>
+        <td>
+          <%= Admin::CommunityViewObject.link_to_show(current_personality, community) %>
+          <%= Admin::CommunityViewObject.link_to_edit(current_personality, community) %>
+          <%= Admin::CommunityViewObject.link_to_destroy(current_personality, community) %>
+        </td>
       </tr>
     <% end %>
   </tbody>
