--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -16,7 +16,7 @@
       <th><%= Event.human_attribute_name('url') %></th>
       <th><%= Event.human_attribute_name('started_at') %></th>
       <th><%= Event.human_attribute_name('ended_at') %></th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -27,9 +27,11 @@
         <td><%= link_to event.url, event.url %></td>
         <td><%= event.started_at %></td>
         <td><%= event.ended_at %></td>
-        <td><%= Admin::EventViewObject.link_to_show(current_personality, event) %></td>
-        <td><%= Admin::EventViewObject.link_to_edit(current_personality, event) %></td>
-        <td><%= Admin::EventViewObject.link_to_destroy(current_personality, event) %></td>
+        <td>
+          <%= Admin::EventViewObject.link_to_show(current_personality, event) %>
+          <%= Admin::EventViewObject.link_to_edit(current_personality, event) %>
+          <%= Admin::EventViewObject.link_to_destroy(current_personality, event) %>
+        </td>
       </tr>
     <% end %>
   </tbody>
