--- a/app/views/admin/radios/index.html.erb
+++ b/app/views/admin/radios/index.html.erb
@@ -14,7 +14,7 @@
     <tr>
       <th><%= Radio.human_attribute_name('title') %></th>
       <th><%= Radio.human_attribute_name('description') %></th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -23,9 +23,11 @@
       <tr>
         <td><%= radio.title %></td>
         <td><%= truncate(radio.description) if radio.description %></td>
-        <td><%= Admin::RadioViewObject.link_to_show(current_personality, radio) %></td>
-        <td><%= Admin::RadioViewObject.link_to_edit(current_personality, radio) %></td>
-        <td><%= Admin::RadioViewObject.link_to_destroy(current_personality, radio) %></td>
+        <td>
+          <%= Admin::RadioViewObject.link_to_show(current_personality, radio) %>
+          <%= Admin::RadioViewObject.link_to_edit(current_personality, radio) %>
+          <%= Admin::RadioViewObject.link_to_destroy(current_personality, radio) %>
+        </td>
       </tr>
     <% end %>
   </tbody>
