--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,26 +13,23 @@
 </head>
 
 <body class="fixed-nav bg-dark">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
   <%= link_to "[ADMIN]ちょっときいて呉高専", admin_root_path, class: "navbar-brand" %>
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarResponsive">
-    <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
-      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav navbar-sidenav">
+      <li class="nav-item">
         <%= link_to admin_root_path, class: "nav-link" do %>
           <i class="fa fa-fw fa-dashboard"></i>
           <span class="nav-link-text">ダッシュボード</span>
         <% end %>
       </li>
-      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Personalities">
+      <li class="nav-item">
         <%= link_to admin_personalities_path, class: "nav-link" do %>
           <i class="fa fa-fw fa-user-circle-o"></i>
           <span class="nav-link-text">パーソナリティ一覧</span>
         <% end %>
       </li>
-      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Radios">
+      <li class="nav-item">
         <%= link_to admin_radios_path, class: "nav-link" do %>
           <i class="fa fa-fw fa-headphones"></i>
           <span class="nav-link-text">ラジオ一覧</span>
@@ -40,7 +37,7 @@
       </li>
 
       <% if current_personality.member? %>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Communities">
+        <li class="nav-item">
           <%= link_to admin_communities_path, class: "nav-link" do %>
             <i class="fa fa-fw fa-users"></i>
             <span class="nav-link-text">コミュニティ一覧</span>
@@ -49,20 +46,13 @@
       <% end %>
 
       <% if current_personality.member? %>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Events">
+        <li class="nav-item">
           <%= link_to admin_events_path, class: "nav-link" do %>
             <i class="fa fa-fw fa-calendar"></i>
             <span class="nav-link-text">イベント一覧</span>
           <% end %>
         </li>
       <% end %>
-      <ul class="navbar-nav sidenav-toggler">
-        <li class="nav-item">
-          <a class="nav-link text-center" id="sidenavToggler">
-            <i class="fa fa-fw fa-angle-left"></i>
-          </a>
-        </li>
-      </ul>
     </ul>
   </div>
 </nav>
