ダイジェスト版をアップロードできるようにした

--- a/app/views/admin/radios/_form.html.erb
+++ b/app/views/admin/radios/_form.html.erb
@@ -46,6 +46,13 @@
       <%= form.file_field :mp3 %>
     </div>
   </div>
+
+  <div class="form-group row">
+    <%= form.label :digest_mp3, class: 'col-2 col-form-label' %>
+    <div class="col-10">
+      <%= form.file_field :digest_mp3 %>
+    </div>
+  </div>
   
   <!--# TODO: ここの見た目はもう少し考えた方がいいかも-->
   <div class="form-group row">
