--- a/app/views/admin/radios/show.html.erb
+++ b/app/views/admin/radios/show.html.erb
@@ -26,7 +26,12 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= Radio.human_attribute_name('mp3') %> :</strong></dt>
-  <dd><%= audio_tag @radio.mp3_url, controls: true %></dd>
+  <dd><%= audio_tag(@radio.mp3_url, controls: true) %></dd>
+</dl>
+
+<dl class="dl-horizontal">
+  <dt><strong><%= Radio.human_attribute_name('digest_mp3') %> :</strong></dt>
+  <dd><%= audio_tag(@radio.digest_mp3_url, controls: true) if @radio.digest_mp3_url %></dd>
 </dl>
 
 <dl class="dl-horizontal">
