markdownヘルプをmarkdownで入力しているところに追加

--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -31,6 +31,7 @@
     <div class="col-10" id="editor">
       <div class="row" style="height: 30em;">
         <div class="col-6">
+          <%= render 'admin/shared/markdown_help' %>
           <%= form.text_area :description, class: 'form-control', rows: 20, "v-model" => "input", debounce: 50 %>
         </div>
         <div class="col-6" style="overflow: scroll;">
