ちょこっと文言を修正

--- a/app/views/admin/shared/_markdown_help.html.erb
+++ b/app/views/admin/shared/_markdown_help.html.erb
@@ -1,4 +1,9 @@
 <a data-html="true" data-placement="bottom" data-toggle="popover" title="markdownチートシート" data-content='
+<pre>
+・改行は行末に半角スペース2つ
+・余白をとった改行は1行あける
+・リスト,番号付きリストは1行あけてから使う
+</pre>
 <div style="display: grid; grid-template-rows: 100px 50px; grid-template-columns: 250px 250px;">
   <div style="grid-row: 1 / 3; grid-column: 1 / 2;">
       <pre>
@@ -23,13 +28,13 @@
   </div>
   <div style="grid-row: 4 / 5; grid-column: 1 / 2;">
       <pre>
-- リスト1
-  - ネスト リスト1_1
-    - ネスト リスト1_1_1
-    - ネスト リスト1_1_2
-  - ネスト リスト1_2
-- リスト2
-- リスト3
+* リスト1
+  * ネスト リスト1_1
+    * ネスト リスト1_1_1
+    * ネスト リスト1_1_2
+  * ネスト リスト1_2
+* リスト2
+* リスト3
       </pre>
   </div>
   <div style="grid-row: 4 / 5; grid-column: 2 / 3;">
