--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>ちょっときいて呉高専</title>
     <%= csrf_meta_tags %>
     <meta  name="viewport" content="width=device-width">
+    <%= render 'shared/favicon'  %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
