--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <%= render 'shared/favicon'  %>
   <title>[ADMIN]ちょっときいて呉高専</title>
+  <meta name="apple-mobile-web-app-title" content="ちょっくれ">
   <%= stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'admin', 'data-turbolinks-track': 'reload' %>
   <!-- Realtime preview -->
