--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <title>ちょっときいて呉高専</title>
+    <meta name="apple-mobile-web-app-title" content="ちょっくれ">
     <%= csrf_meta_tags %>
     <meta  name="viewport" content="width=device-width">
     <%= render 'shared/favicon'  %>
