[fix] descriptionを短く変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta  name="viewport" content="width=device-width">
     <meta name="description" content="ちょっくれとは、呉のちょっと気になるコミュニティやイベントについて発信していく、呉高専公認の学生団体であり、ラジオ番組です。">
     <meta property="og:title" content="ちょっくれ | ちょっときいて呉高専"/>
-    <meta property="og:description" content="ちょっくれとは、呉のちょっと気になるコミュニティやイベントについて発信していく、呉高専公認の学生団体であり、ラジオ番組です。"/>
+    <meta property="og:description" content="呉のちょっと気になるコミュニティやイベントについて発信していくラジオ番組です。"/>
     <meta property="og:image" content="<%= asset_url('logo/rectangle.png') %>"/>
     <meta property="og:url" content="<%= url_for(only_path: false) %>"/>
     <meta property="og:type" content="website"/>
