[fix] Twitterのcardをsummaryに変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <meta name="twitter:title" content="ちょっくれ | ちょっときいて呉高専"/>
     <meta name="twitter:description" content="呉のちょっと気になるコミュニティやイベントについて発信していくラジオ番組です。"/>
     <meta name="twitter:site" content="@cho_kure"/>
-    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:card" content="summary"/>
     <meta name="twitter:image" content="<%= asset_url('logo/circle.jpg') %>"/>
     <%= render 'shared/favicon'  %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
