[fix] OGP設定を長方形の画像に変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,14 @@
     <meta name="description" content="ちょっくれとは、呉のちょっと気になるコミュニティやイベントについて発信していく、呉高専公認の学生団体であり、ラジオ番組です。">
     <meta property="og:title" content="ちょっくれ | ちょっときいて呉高専"/>
     <meta property="og:description" content="呉のちょっと気になるコミュニティやイベントについて発信していくラジオ番組です。"/>
-    <meta property="og:image" content="<%= asset_url('logo/circle.jpg') %>"/>
+    <meta property="og:image" content="<%= asset_url('logo/rectangle.png') %>"/>
     <meta property="og:url" content="<%= url_for(only_path: false) %>"/>
     <meta property="og:type" content="website"/>
     <meta name="twitter:title" content="ちょっくれ | ちょっときいて呉高専"/>
     <meta name="twitter:description" content="呉のちょっと気になるコミュニティやイベントについて発信していくラジオ番組です。"/>
     <meta name="twitter:site" content="@cho_kure"/>
-    <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:image" content="<%= asset_url('logo/circle.jpg') %>"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:image" content="<%= asset_url('logo/rectangle.png') %>"/>
     <%= render 'shared/favicon' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
