--- a/app/views/admin/contacts/edit.html.erb
+++ b/app/views/admin/contacts/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Contact</h1>
+<h1>投稿情報を編集</h1>
 
 <%= render 'form', contact: @contact %>
-
-<%= link_to 'Show', @contact %> |
-<%= link_to 'Back', contacts_path %>
