--- a/app/views/admin/contacts/index.html.erb
+++ b/app/views/admin/contacts/index.html.erb
@@ -1,37 +1,34 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-8">
+    <h1>投稿一覧</h1>
+  </div>
+  <div class="col-4">
+    <%= Admin::ContactViewObject.link_to_new(current_personality) %>
+  </div>
+</div>
 
-<h1>Contacts</h1>
-
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Corner</th>
-      <th>Message</th>
-      <th>Nickname</th>
-      <th>Name</th>
-      <th>Department</th>
-      <th>Grade</th>
-      <th colspan="3"></th>
+      <th><%= Contact.human_attribute_name('corner') %></th>
+      <th><%= Contact.human_attribute_name('nickname') %></th>
+      <th><%= Contact.human_attribute_name('message') %></th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @contacts.each do |contact| %>
       <tr>
-        <td><%= contact.corner %></td>
-        <td><%= contact.message %></td>
+        <td><%= contact.corner.t %></td>
         <td><%= contact.nickname %></td>
-        <td><%= contact.name %></td>
-        <td><%= contact.department %></td>
-        <td><%= contact.grade %></td>
-        <td><%= link_to 'Show', contact %></td>
-        <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
-        <td><%= link_to 'Destroy', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= truncate(contact.message) if contact.message %></td>
+        <td>
+          <%= Admin::ContactViewObject.link_to_show(current_personality, contact) %>
+          <%= Admin::ContactViewObject.link_to_edit(current_personality, contact) %>
+          <%= Admin::ContactViewObject.link_to_destroy(current_personality, contact) %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Contact', new_contact_path %>
